--- a/ini_files/cov_y6_mcal_fourier_3src.ini
+++ b/ini_files/cov_y6_mcal_fourier_3src.ini
@@ -25,7 +25,7 @@ source_tomobins : 3
 lens_tomobins : 5
 sigma_e : 0.39441348451
 shear_REDSHIFT_FILE : zdistris/source_DESY6_3bins.nz
-clustering_REDSHIFT_FILE : zdistris/lens_DESY6.nz
+clustering_REDSHIFT_FILE : zdistris/mcal_1101_lens.nz
 source_n_gal : 2.094000,2.094000,2.094000
 lens_n_gal : 0.0134,0.0343,0.0505,0.0301,0.0089
 lens_tomogbias : 1.44,1.70,1.698,1.997,2.058
