--- a/yaml/DESY1_3x2pt_treecorr_ocelote.yaml
+++ b/yaml/DESY1_3x2pt_treecorr_ocelote.yaml
@@ -1,19 +1,22 @@
 # output file
 ######## specify base_dir only if absolute path required. chain_file will use base_dir as prefix
 base_dir : ./
-chain_file : ../../../../../groups/timeifler/jiachuanxu/temp/DESY1_3x2_public_test
+chain_file : ../../../../../groups/timeifler/jiachuanxu/temp/DESY1_3x2pt_treecorr_test
 
 n_threads  : 1
 iterations : 2000
-nwalkers : 192
+nwalkers : 560
 
-# 2pt files
-cov_file    : covs/invcov_y1_3x2pt_public
+# cov NOT invcov!
+# also note the format of cov MUST be "%d %d %le\n"
+cov_file    : covs/cov_y1_3x2pt_public
 # homebrew datavec
-data_file   : datav/xi_Y1_3x2pt_public
+# also note the format of datav MUST be "%d %le\n"
+data_file   : datav/xi_Y1_3x2pt_treecorr_test
 
-# if no mask_file specified,
-# then generate mask from scale cuts specified below
+# generate mask from scale cuts specified below
+# 0 = mask out, 1 = keep
+# also note the format of mask MUST be "%d %le\n"
 mask_file   : yaml/xi_desy1_3x2pt_treecorr_test.mask
 # need to change, but just have a look
 source_nz   : zdistris/mcal_1101_source.nz
@@ -28,12 +31,21 @@ run_mode    : Halofit
 # The mean parameter vectors must always be specified:
 # sigma vectors are optional - if not set the parameter is fixed to the
 # mean value above.
-shear_m_mean : [0.0, 0.0, 0.0, 0.0]
-source_z_bias_mean: [0.0, 0.0, 0.0, 0.0]
-lens_z_bias_mean: [0.0, 0.0, 0.0, 0.0, 0.0]
-shear_m_sigma: [0.005,0.005,0.005,0.005]
-source_z_bias_sigma: [0.002,0.002,0.002,0.002]
-lens_z_bias_sigma: [0.005,0.005,0.005,0.005,0.005]
+
+#shear_m_mean : [0.0, 0.0, 0.0, 0.0]
+#source_z_bias_mean: [0.0, 0.0, 0.0, 0.0]
+#lens_z_bias_mean: [0.0, 0.0, 0.0, 0.0, 0.0]
+#shear_m_sigma: [0.005,0.005,0.005,0.005]
+#source_z_bias_sigma: [0.002,0.002,0.002,0.002]
+#lens_z_bias_sigma: [0.005,0.005,0.005,0.005,0.005]
+
+shear_m_mean : [0.012, 0.012, 0.012, 0.012]
+source_z_bias_mean: [-0.001, -0.019, 0.009, -0.018]
+lens_z_bias_mean: [0.008, -0.005, 0.006, 0.0, 0.0]
+
+shear_m_sigma: [0.023,0.023,0.023,0.023]
+source_z_bias_sigma: [0.016,0.013,0.011,0.022]
+lens_z_bias_sigma: [0.007,0.007,0.006,0.010,0.010]
 
 ######################################
 #NUISANCE PARAMETERS -     FLAT PRIORS
@@ -50,17 +62,30 @@ b_mag_range: 0.0
 ######################################
 #COSMOLOGY PARAMETERS -   FLAT PRIORS
 ######################################
-omega_m_range : [0.1, 0.3, 0.9]
+
+omega_m_range : [0.1, 0.267, 0.9]
+#omega_m_range : [0.1, 1.472937e-01, 0.9]
+
 #A_s_range : [5.e-10,2.3e-9,5.e-9]
-sigma_8_range : [0.4,0.82355,1.2]
+sigma_8_range : [0.4, 0.819, 1.2]
+#sigma_8_range : [0.4,1.003228e+00,1.2]
+
 n_s_range : [0.87, 0.97, 1.07]
+#n_s_range : [0.87, 1.069054e+00, 1.07]
+
 w0_range : -1.0
 wa_range : 0.0
+
 omega_b_range : [0.03, 0.048, 0.07]
+#omega_b_range : [0.03, 3.011464e-02, 0.07]
+
 #omega_nuh2_range : [0.0006,0.0006155,0.01]
 # omega_nuh2_range : 0.00083
 omega_nuh2_range : 0.0
+
 h0_range : [0.55, 0.69, 0.91]
+#h0_range : [0.55, 9.069906e-01, 0.91]
+
 MGSigma_range : 0.0
 MGmu_range : 0.0
 
