--- a/ini_files/cov_y1_mcal_mix.ini
+++ b/ini_files/cov_y1_mcal_mix.ini
@@ -32,6 +32,7 @@ lens_tomogbias : 1.44,1.70,1.698,1.997,2.058
 #
 # Covariance paramters
 #
+# ell Log bin
 # lmin,lmax
 lmin : 40.0
 lmax : 3000.0
@@ -40,6 +41,11 @@ ncl : 15
 tmin : 2.5
 tmax : 250.0
 ntheta : 20
+# CMB band power
+nbp : 14
+binmat_file : cmblensrec/plancksmica/binning_matrix.txt
+bindef_file : cmblensrec/plancksmica/bin_definition.txt
+# Gaussian & Non-Gaussian
 ng : 1
 cng : 1
 outdir : out_cov_desy1xplanck_mix/
