--- a/ini_files/cov_y1_mcal_mix.ini
+++ b/ini_files/cov_y1_mcal_mix.ini
@@ -44,7 +44,10 @@ ntheta : 20
 # CMB band power
 nbp : 14
 binmat_file : cmblensrec/plancksmica/binning_matrix.txt
+binmat_with_corr_file: cmblensrec/plancksmica/binning_matrix_with_correction.txt
 bindef_file : cmblensrec/plancksmica/bin_definition.txt
+lmin_bp_with_corr: 2
+lmax_bp_with_corr: 2500
 # Gaussian & Non-Gaussian
 ng : 1
 cng : 1
