add new Planck lensing dataset

--- a/ini_files/cov_y1_mcal_mix.ini
+++ b/ini_files/cov_y1_mcal_mix.ini
@@ -1,18 +1,35 @@
 #
 # Cosmological parameters
 #
-Omega_m : 0.2837
-Omega_v : 0.7163
-sigma_8 : 0.795431
-n_spec : 0.96859
+### The original cosmo paras
+#Omega_m : 0.2837
+#Omega_v : 0.7163
+#sigma_8 : 0.795431
+#n_spec : 0.96859
+#w0 : -1.0
+#wa : 0.0
+#omb : 0.062
+#h0 : 0.8433
+#coverH0 : 2997.92458
+#rho_crit : 7.4775e+21
+#f_NL : 0.0
+#pdelta_runmode : emu
+
+### Planck 2018 fiducial cosmo params
+# A_s = 2.119e-9; tau=0.06; neutrino mass = [0, 0, 0.06] eV
+Omega_m : 0.31735
+Omega_v : 0.68259
+sigma_8 : 0.8191
+n_spec : 0.964
 w0 : -1.0
 wa : 0.0
-omb : 0.062
-h0 : 0.8433
+omb : 0.04937
+h0 : 0.67
 coverH0 : 2997.92458
 rho_crit : 7.4775e+21
 f_NL : 0.0
 pdelta_runmode : emu
+
 #
 # Survey and galaxy parameters
 #
@@ -43,11 +60,13 @@ tmax : 250.0
 ntheta : 20
 # CMB band power
 nbp : 14
-binmat_file : cmblensrec/plancksmica/pttptt_agr2_CMBmarged/binning_matrix_table.txt
-binmat_with_corr_file: cmblensrec/plancksmica/pttptt_agr2_CMBmarged/binning_matrix_with_correction_table.txt
-bindef_file : cmblensrec/plancksmica/pttptt_agr2_CMBmarged/bin_definition.txt
-lmin_bp_with_corr: 2
-lmax_bp_with_corr: 2500
+binmat_file : cmblensrec/plancksmica/pp_agr2_CMBmarged/binning_matrix_table.txt
+#binmat_with_corr_file : cmblensrec/plancksmica/pp_agr2_CMBmarged/binning_matrix_with_correction_table.txt
+binmat_with_corr_file : cmblensrec/plancksmica/pp_agr2_CMBmarged/binning_matrix_table_extended.txt
+
+bindef_file : cmblensrec/plancksmica/pp_agr2_CMBmarged/bin_definition.txt
+lmin_bp_with_corr : 2
+lmax_bp_with_corr : 2500
 # Gaussian & Non-Gaussian
 ng : 1
 cng : 1
