--- a/ini_files/cov_y1_mcal_mix.ini
+++ b/ini_files/cov_y1_mcal_mix.ini
@@ -49,24 +49,26 @@ lens_tomogbias : 1.44,1.70,1.698,1.997,2.058
 #
 # Covariance paramters
 #
+# Note: only one of ell Log bin or CMB band power can be set
+
 # ell Log bin
-# lmin,lmax
-lmin : 40.0
-lmax : 3000.0
-ncl : 15
-# tmin,tmax in arcminutes
-tmin : 2.5
-tmax : 250.0
-ntheta : 20
+#lmin : 40.0
+#lmax : 3000.0
+#ncl : 15
 # CMB band power
 nbp : 14
 binmat_file : cmblensrec/plancksmica/pp_agr2_CMBmarged/binning_matrix_table.txt
 #binmat_with_corr_file : cmblensrec/plancksmica/pp_agr2_CMBmarged/binning_matrix_with_correction_table.txt
 binmat_with_corr_file : cmblensrec/plancksmica/pp_agr2_CMBmarged/binning_matrix_table_extended.txt
-
 bindef_file : cmblensrec/plancksmica/pp_agr2_CMBmarged/bin_definition.txt
 lmin_bp_with_corr : 2
 lmax_bp_with_corr : 2500
+
+# tmin,tmax in arcminutes
+tmin : 2.5
+tmax : 250.0
+ntheta : 20
+
 # Gaussian & Non-Gaussian
 ng : 1
 cng : 1
