--- a/ini_files/cov_y1_mcal_mix.ini
+++ b/ini_files/cov_y1_mcal_mix.ini
@@ -43,6 +43,8 @@ lens_tomobins : 5
 sigma_e : 0.39441348451
 shear_REDSHIFT_FILE : zdistris/mcal_1101_source.nz
 clustering_REDSHIFT_FILE : zdistris/mcal_1101_lens.nz
+C_FOOTPRINT_FILE : yaml/DES_Y1A1_3x2pt_redMaGiC_MASK_HPIX1024_Cl.txt
+HEALPIX_WINDOW_FUNCTION_FILE : yaml/HPIX1024_pixwin.txt
 source_n_gal : 1.496,1.5189,1.5949,0.7949
 lens_n_gal : 0.0134,0.0343,0.0505,0.0301,0.0089
 lens_tomogbias : 1.44,1.70,1.698,1.997,2.058
