--- a/ini_files/cov_y1_mcal_mix.ini
+++ b/ini_files/cov_y1_mcal_mix.ini
@@ -70,6 +70,9 @@ lmax_bp_with_corr : 2500
 tmin : 2.5
 tmax : 250.0
 ntheta : 20
+tmin_ss : 0.25
+tmax_ss : 250.0
+ntheta_ss : 30
 
 # Gaussian & Non-Gaussian
 ng : 1
