update ACT DR6 CMBL related data files

--- a/ini_files/cov_y3_mcal_maglim_actdr6_mix.ini
+++ b/ini_files/cov_y3_mcal_maglim_actdr6_mix.ini
@@ -53,6 +53,7 @@ lens_tomo_bmag : 0.43,0.30,1.75,1.94,1.56,2.96
 #lmin : 40.0
 #lmax : 3000.0
 #ncl : 15
+
 ### CMB band power
 # ACT DR6: full Clkk has 18 bins
 # conservative range: [2, 12] 10 data points
@@ -60,13 +61,18 @@ lens_tomo_bmag : 0.43,0.30,1.75,1.94,1.56,2.96
 # The CMB-marg likelihood only has the same binning matrix and Clkk
 # as the exact likelihood, but a larger covariance matrix.
 nbp : 18
-binmat_file : cmblensrec/act_dr6/covmat_act.txt
-#binmat_with_corr_file : cmblensrec/plancksmica/pp_agr2_CMBmarged/binning_matrix_with_correction_table.txt
-binmat_with_corr_file : cmblensrec/act_dr6/covmat_act.txt
-bindef_file : cmblensrec/act_dr6/act_dr6_bindef.txt
+cmbl_nlkk_file : cmblensrec/act_dr6/baseline_CMBmarg/NLkk_ACT_DR6_lmax3000.txt
+bindef_file : cmblensrec/act_dr6/baseline_CMBmarg/bin_definition.txt
+# binmat: only used in k-related covariance (not including kk-kk)
 # L range correponding to binmat.shape[1] 
-lmin_bp_with_corr : 0
-lmax_bp_with_corr : 2999
+binmat_file : cmblensrec/act_dr6/baseline_CMBmarg/binning_matrix_table.txt
+lmin_bp : 8
+lmax_bp : 2048
+# binmat with corr: only used in kk-kk covariance and Ckk dv calculation
+# L range correponding to binmat.shape[1] 
+binmat_with_corr_file : cmblensrec/act_dr6/baseline_CMBmarg/binning_matrix_table.txt
+lmin_bp_with_corr : 8
+lmax_bp_with_corr : 2048
 
 # tmin,tmax in arcminutes
 tmin : 2.5
